--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,6 @@
 		<link rel="stylesheet" type="text/css" href="font/iconfont.css" />
 		<script src="js/jquery-2.1.0.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
-
-
 	</head>
 	<body>
 		<div id="hander_nav">
@@ -32,16 +30,20 @@
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav center_nav">
 							<li class="">
-								<a href="#">产品和方案 <span class=""></span></a>
+								<a href="#"> <span>产品和方案</span></a>
+								<b>/</b>
 							</li>
 							<li>
-								<a href="#">专业服务</a>
+								<a href="#"><span>专业服务</span></a>
+								<b>/</b>
 							</li>
-							<li>
+							<!--<li>
 								<a href="#">文档</a>
-							</li>
+								<b>/</b
+							</li>-->
 							<li>
-								<a href="#">关于我们</a>
+								<a href="#"><span>关于我们</span></a>
+								<!--<b>/</b>-->
 							</li>
 							<!--<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
