--- a/src/index.html
+++ b/src/index.html
@@ -25,16 +25,16 @@
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>
 				      </button>
-						<a class="navbar-brand login_nav txtwav " href="#">DeeChUNANG 蝶 创</a>
+						<a class="navbar-brand login_nav txtwav " href="/">DeeChUNANG 蝶 创</a>
 					</div>
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav center_nav">
 							<li class="">
-								<a href="#"> <span>产品和方案</span></a>
+								<a href="./product.html"> <span>产品和方案</span></a>
 								<b>/</b>
 							</li>
 							<li>
-								<a href="#"><span>专业服务</span></a>
+								<a href="./service.html"><span>专业服务</span></a>
 								<b>/</b>
 							</li>
 							<!--<li>
@@ -42,7 +42,7 @@
 								<b>/</b
 							</li>-->
 							<li>
-								<a href="#"><span>关于我们</span></a>
+								<a href="./user.html"><span>关于我们</span></a>
 								<!--<b>/</b>-->
 							</li>
 							<!--<li class="dropdown">
