--- a/src/product.html
+++ b/src/product.html
@@ -25,16 +25,16 @@
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>
 				      </button>
-						<a class="navbar-brand login_nav txtwav " href="#">DeeChUNANG 蝶 创</a>
+						<a class="navbar-brand login_nav txtwav " href="/">DeeChUNANG 蝶 创</a>
 					</div>
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav center_nav">
 							<li class="">
-								<a href="#"> <span>产品和方案</span></a>
+								<a href="./product.html"> <span>产品和方案</span></a>
 								<b>/</b>
 							</li>
 							<li>
-								<a href="#"><span>专业服务</span></a>
+								<a href="./service.html"><span>专业服务</span></a>
 								<b>/</b>
 							</li>
 							<!--<li>
@@ -42,7 +42,7 @@
 								<b>/</b
 							</li>-->
 							<li>
-								<a href="#"><span>关于我们</span></a>
+								<a href="./user.html"><span>关于我们</span></a>
 								<!--<b>/</b>-->
 							</li>
 							<!--<li class="dropdown">
@@ -83,11 +83,11 @@
 			  	<dd><b></b><a href="">金蝶PLM</a></dd>
 			  </dl>
 			  <dl>
-			  	<dt>移动互联网 <i class="iconfont">&#xe656;</i></dt>
+			  	<dt>移动互联网 <i class="iconfont sc_180">&#xe656;</i></dt>
 			  	<dd><b></b><a href="">金蝶PLM</a></dd>
 			  </dl>
 			  <dl>
-			  	<dt>行业解决方案 <i class="iconfont">&#xe656;</i></dt>
+			  	<dt>行业解决方案 <i class="iconfont sc_180">&#xe656;</i></dt>
 			  	<dd><b></b><a href="">金蝶PLM</a></dd>	
 			  </dl>
 			</div>
@@ -147,6 +147,43 @@
 							</div>
 						</li>
 					</ul>
+				</div>
+			
+				<div class="title_text text-center">
+					<span>协同办公-成功案例</span>
+					<img src="img/user/pubilc_top.png"/>
+				</div>	
+				<!--成功案例-->
+				<div class="SuccessCase">
+					<ol>
+						<li>
+							<div class="case_img">
+								<img src="img/product/demo1.jpg"/>
+							</div>
+							<div class="case_msg">
+								<span>广铁集团</span>
+								<p>我单位自2003年开始使用以来，每年都能够按照我单位的管理需要，提供软件增值服务，解决我单位大量的文件流转、业务处理、辅助办公,供软件增值服务，解决我单位大量的文件流转、业务处理、辅助办公,供软件增值服务，解决我单位大量的文件流转、业务处理、辅助办公</p>
+							</div>
+						</li>
+						<li>
+							<div class="case_img">
+								<img src="img/product/demo2.jpg"/>
+							</div>
+							<div class="case_msg">
+								<span>中国南航</span>
+								<p>我单位自2003年开始使用以来，每年都能够按照我单位的管理需要，提供软件增值服务，解决我单位大量的文件流转、业务处理、辅助办公,供软件增值服务，解决我单位大量的文件流转、业务处理、辅助办公,供软件增值服务，解决我单位大量的文件流转、业务处理、辅助办公</p>
+							</div>
+						</li>
+						<li>
+							<div class="case_img">
+								<img src="img/product/demo3.jpg"/>
+							</div>
+							<div class="case_msg">
+								<span>盘古大观</span>
+								<p>我单位自2003年开始使用以来，每年都能够按照我单位的管理需要，提供软件增值服务，解决我单位大量的文件流转、业务处理、辅助办公,供软件增值服务，解决我单位大量的文件流转、业务处理、辅助办公,供软件增值服务，解决我单位大量的文件流转、业务处理、辅助办公</p>
+							</div>
+						</li>
+					</ol>
 				</div>
 			</div>
 		</div>
