--- a/src/user.html
+++ b/src/user.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge，chrome=1">
-		<title>DeeChUNANG 碟创-产品和服务</title>
+		<title>DeeChUNANG 碟创-公司简介</title>
 		<link rel="stylesheet" type="text/css" href="css/public.css" />
 		<link rel="stylesheet" type="text/css" href="css/lib/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/lib/txt.wav.css"/>
 		<link rel="stylesheet" type="text/css" href="css/ssrpublic.css" />
-		<link rel="stylesheet" type="text/css" href="css/service.css" />
+		<link rel="stylesheet" type="text/css" href="css/user.css" />
 		<link rel="stylesheet" type="text/css" href="font/iconfont.css" />
 		<script src="js/jquery-2.1.0.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
@@ -63,7 +63,7 @@
 		</div>
 		<!--轮播-->
 		<div id="lunbo_ssr">
-		   <img class="img-responsive" src="./img/service/banner1.jpg"/>
+		   <img class="img-responsive" src="./img/user/banner1.jpg"/>
 		</div>
 		<div class="Label_ssr">
 			<img src="img/product/icon_product.png"/>
